fix img alignment and navbar responsive for mobile

--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -25,11 +25,14 @@ header {
   padding-right: 0;
 }
 .logo-icon {
-  width: 64px;
-  height: 64px;
+  width: 50%;
+  height: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.logo-icon > img {
+  width: 100%;
 }
 .navbar-brand .logo:hover {
   transform: scale(1.1) translateY(-2px);
@@ -83,6 +86,7 @@ header {
     padding: 15px 20px;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: nowrap;
   }
   .navbar-collapse {
     width: 100%;
@@ -107,7 +111,7 @@ header {
     gap: 10px;
   }
   .logo-icon {
-    width: 48px;
-    height: 48px;
+    width: 50%;
+    height: 50%;
   }
 }
